# color_mapping

./: CMakeLists.txt  color_main.cc  node_main.cc  real_time_main.cc
config/: config.yaml
include/: color_mapping.cc  color_mapping.h  colorful.cc  colorful.h  mapping.cc  mapping.h  real_time_color.cc  real_time_color.h
